Fixed spacing on shop items.

--- a/frontend/src/sass/4_layout/_dashItems.scss
+++ b/frontend/src/sass/4_layout/_dashItems.scss
@@ -29,9 +29,9 @@
   display: grid;
   margin-top: 10% !important;
   margin: auto;
-  margin-bottom: 10%;
+  margin-bottom: 30% !important;
   width: 95%;
-  height: 30vh;
+  height: auto;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   grid-row-gap: minmax(10px, auto);
@@ -46,9 +46,14 @@
 .grid-item2 {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
-  width: auto;
-
-  height: 80%;
+  margin: auto;
+  width: 80% !important;
+  height: 80% !important;
   font-size: 30px;
   text-align: center;
+}
+
+.img-dashshop {
+  width: 100%;
+  height: 100%;
 }
